--- a/style.scss
+++ b/style.scss
@@ -1,14 +1,64 @@
 body {
+    user-select: none;
+    background-color: rgb(0, 0, 0);
+    color: white;
 }
 
 #app {
+    width: 500px;
+    height: 500px;
+    background-color: rgb(0, 0, 0);
+    margin-left: 10px;
+    border-radius: 50%;
+    font-size: large;
+    box-shadow: 0 0 10px 5px rgb(255, 255, 255);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.tittel {
+    margin-left: 80px;
+    position: absolute;
+    top: 25%;
+    left: 33%;
+    transform: translate(-50%, -50%);
+}
+
+.input {
+    position: absolute;
+    height: 30px;
+    width: 200px;
+    top: 50%;
+    left: 46%;
+    box-shadow: 0 0 10px 5px rgb(0, 0, 0);
+    transform: translate(-50%, -50%);
+    font-size: large;
 }
 
 .knapp {
-    width: 30px;
-    height: 30px;
+    width: 80px;
+    height: 37px;
+    position: absolute;
+    font-size: large;
+    border-radius: 50%;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    box-shadow: 0 0 10px 5px rgb(255, 255, 255);
+    top: 50%;
+    left: 78%;
+    transform: translate(-50%, -50%);
     &:hover {
-        background-color: red;
-        box-shadow: 0 0 10px 5px red;
+        background-color: rgb(0, 0, 0);
+        box-shadow: 0 0 10px 5px rgb(255, 255, 255);
     }
+}
+
+.svar {
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: xx-large;
 }
